ingress/leveldb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leveldb-ingress
  namespace: leveldb
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: leveldb.setupwp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: leveldb-service
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: leveldb-external
  namespace: leveldb
spec:
  selector:
    app: leveldb
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
